# Readme-genius

./: .gitignore  LICENSE  README.md  pyproject.toml
readme_genius/: main.py
readme_genius/core/: config.py  generator.py  questions.py
readme_genius/templates/: advanced_template.md  default_template.md  minimalist_template.md
readme_genius/templates/licenses/: MIT.txt
tests/: test_generator.py
