[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-genius"
version = "0.1.0"
authors = [
  { name="Aravind P", email="your-email@example.com" },
]
description = "A professional README.md generator CLI tool built with Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "rich",
    "questionary",
    "Jinja2",
]

[project.urls]
Homepage = "https://github.com/aravindp602/readme-genius"
Issues = "https://github.com/aravindp602/readme-genius/issues"

# This is the magic part!
[project.scripts]
readme-genius = "readme_genius.main:run"