[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-genius"
version = "0.1.0"
authors = [
  { name="Aravind P", email="your-email@example.com" },
]
description = "A professional README.md generator CLI tool built with Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]
# These are the CORE dependencies needed to RUN the tool
dependencies = [
    "rich",
    "questionary",
    "Jinja2",
    "typer[all]",
]

[project.urls]
Homepage = "https://github.com/aravindp602/readme-genius"
Issues = "https://github.com/aravindp602/readme-genius/issues"

[project.scripts]
readme-genius = "readme_genius.main:run"

# This is the NEW section for development-only tools
[project.optional-dependencies]
dev = [
    "pytest",
    # You can add other dev tools here later, like "pytest-mock"
]